Archive2/47/82194b066f8e40/output
main.cpp: In function 'int main()':
main.cpp:21:23: error: type/value mismatch at argument 1 in template parameter list for 'template<class T> class FeaturePoint'
     FeaturePoint<Point> fp;
                       ^
main.cpp:21:23: error:   expected a type, got 'Point'
main.cpp:21:27: error: invalid type in declaration before ';' token
     FeaturePoint<Point> fp;
                           ^
main.cpp:21:25: warning: unused variable 'fp' [-Wunused-variable]
     FeaturePoint<Point> fp;
                         ^
